--- a/app.json
+++ b/app.json
@@ -40,17 +40,13 @@
             "required": false
         }
     },
-    "addons": [
-    {
-         "options": {
-            "version": "12"
-         }
-
+  "buildpacks": [{
+      "url": "heroku/python"
+    }],
+  "formation": {
+      "web": {
+          "quantity": 1,
+          "size": "eco"
       }
-  ],
-    "buildpacks": [
-        {
-            "url": "heroku/python"
-        }
-    ]
+  }
 }
