--- a/app.json
+++ b/app.json
@@ -24,6 +24,11 @@
             "value": "",
             "required": true
         },
+        "DATABASE_URL": {
+            "description": "PostgresSQL Database URL",
+            "value": "Get it from ElephantSQL",
+            "required": true
+        },
         "BOT_TOKEN": {
             "description": "Bot token, get it from @BotFather.",
             "value": "",
